--- a/WEBSITE STYLING/project resources.css
+++ b/WEBSITE STYLING/project resources.css
@@ -20,13 +20,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--content-bg);
+    background-color: #1e104d;
     border-radius: 15px;
-    border: 5px solid rgba(5, 5, 17, 0.6);
+    border: 5px solid rgba(4, 4, 34, 0.714);
     margin: 230px 100px;
     font-size: 16px;
     line-height: 1.6;
-    box-shadow: 5px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.1);
     transition:background-color 0.3s ease, box-shadow 0.3s ease;
     overflow:auto;
 }
@@ -65,18 +65,25 @@
 @media (max-width: 600px) {
 
   .resource-box {
-    font-size: 14px;
+    font-size: 19px;
     padding: 15px 10px;
+    margin:0px;
+    margin-top:230px;
+
   }
 
+  .resource-box ul{
+    padding-left:20px;
+    margin:30px;
+}
   .resource-link {
     font-size: 1em;
-    width: 180px;
+    width: 150px;
     padding: 8px 12px;
   }
 
   .resource-list {
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
 }
