Updated blockchain companies html, css, menu css

--- a/WEBSITE STYLING/companies.css
+++ b/WEBSITE STYLING/companies.css
@@ -39,6 +39,11 @@
   .spacer {
     display:none;
     }
+
+  .crypto-logo{
+    padding-left:5%;
+    padding-right:5%;
+  }
 }
 
  @container (min-width: 400px) {
