--- a/WEBSITE STYLING/menu.css
+++ b/WEBSITE STYLING/menu.css
@@ -169,6 +169,7 @@ h1.site-title {
   margin-top: 40px;
   margin-bottom:0px;
   padding: 1rem;
+  overflow:auto;
   background:var(--h3-bg);
   border: 1px solid rgba(255, 255, 255, 0.2);
   color: var(--header-text);
@@ -177,15 +178,13 @@ h1.site-title {
 
     
 }
-.side-menu{
-      margin-bottom:40px;
-
-}
 .side-menu .h3-first{
     margin-top:70px;
 }
 .side-menu h3:last-of-type {/*select the last h3 inside the parent*/
     margin-bottom:10px;
+    -webkit-overflow-scrolling: touch;
+
 }
 
 
