--- a/WEBSITE STYLING/style.css
+++ b/WEBSITE STYLING/style.css
@@ -218,6 +218,8 @@ body a{
     font-size: 14px;             /* Slightly smaller text on small screens */
     padding: 15px;
     font-style: "Segoe UI", Arial, Helvetica, sans-serif;
+    margin: 50px 0px;
+
   }
 
   body a{
