--- a/ABOUT ME/welcome.css
+++ b/ABOUT ME/welcome.css
@@ -54,6 +54,13 @@
     .welcome-description p{
       font-size:16px;
     }
+
+    .welcome-description a{
+      font-size:1.0rem;
+      text-decoration: underline;
+      text-decoration-style:solid ;
+      text-decoration-color: rgb(78, 126, 119);
+    }
 /* =======================================
   ABOUT ME BOX PIC, QUOTES
 ========================================== */
@@ -244,26 +251,31 @@
 
     @media (max-width: 768px) {
       .welcome {
-        padding: 3rem 1.5rem;
+        padding: 1rem 3rem;
       }
-      .welcome-title { 
-        font-size: 2.8rem;
-        margin-bottom: 1.5rem;
+      
+      .welcome-title{
+        margin-left: 20px;
+        margin-right:20px;
       }
       .welcome-subtitle { 
-        font-size: 1.3rem;
         margin-bottom: 2rem;
       }
       .welcome-description {
         font-size: 1.1rem;
-        margin-bottom: 2rem;
+      }
+      .quotes::before{
+        top:23px;
+        left: 2px;
       }
       .features {
         padding: 3rem 2rem;
       }
       .features-title {
-        font-size: 2.2rem;
-        margin-bottom: 3rem;
+        font-size: 3rem;
+        margin-top:0px;
+        padding-top:0px;
+        margin-bottom: 4rem;
       }
       .features-grid {
         grid-template-columns: 1fr;
