--- a/ABOUT ME/welcome.css
+++ b/ABOUT ME/welcome.css
@@ -257,12 +257,15 @@
       .welcome-title{
         margin-left: 20px;
         margin-right:20px;
+        
       }
       .welcome-subtitle { 
         margin-bottom: 2rem;
       }
       .welcome-description {
         font-size: 1.1rem;
+        margin-left:10px;
+        margin-right:10px;
       }
       .quotes::before{
         top:23px;
@@ -289,6 +292,7 @@
     }
 
     @media (max-width: 600px) {
+
       .feature-card{
         height:10px;
         border:3px solid rgba(91, 93, 224, 0.805);
