--- a/ABOUT ME/welcome.css
+++ b/ABOUT ME/welcome.css
@@ -266,6 +266,7 @@
         font-size: 1.1rem;
         margin-left:10px;
         margin-right:10px;
+        padding:0px;
       }
       .quotes::before{
         top:23px;
