Created the ai concepts file and added related css, changed h2 hover color in style.html, changed link for AI button in index.html

--- a/WEBSITE STYLING/style.css
+++ b/WEBSITE STYLING/style.css
@@ -16,7 +16,7 @@
             --sidebar-hover: #5575a3;
 
             --h2-boxes:#484797;
-            --h2-hover: #4f14a7;
+            --h2-hover: #4714a7;
 
             --content-bg: #212664;
             --strong-color:rgb(180, 251, 240);
