--- a/PYTHON/ai concepts.css
+++ b/PYTHON/ai concepts.css
@@ -91,7 +91,8 @@
         .tech-button {
             padding: 15px 40px; 
             font-size: 1.1rem;  
-            margin: 25px 0;     
+            margin: 25px 0; 
+            margin-left:10px;    
             width: 90%;         
             max-width: 300px;  
         }
