--- a/WEBSITE STYLING/menu.css
+++ b/WEBSITE STYLING/menu.css
@@ -223,6 +223,10 @@ h1.site-title {
   margin-bottom: 10px; 
 }
 
+    .side-menu h3:last-of-type + .collapsible-links a:last-child {
+    padding-bottom: 37px;
+}
+
 /* ==================================
   COLLAPSIBLE LINKS ANIMATIONS
 ===================================== */  
